# ur3-vive-pi05

./: .gitignore  README.md  survive-cli.py  uf_robot_pika_teleop.py
ur5_teleop_vive/: CMakeLists.txt  package.xml
ur5_teleop_vive/launch/: view_ur5.launch.py
ur5_teleop_vive/ur5_teleop_vive/thesis_code/: .gitignore  Convert_hdf5_to_lerobot.py  calib_manual.py  calip4x4.py  camera_check.py  check_hdf5.py  control_robstride_ros.py  control_robstride_ros_without_calip.py  digit_publisher_ros2.py  digit_test.py  frame_as_posestamped_ros2.py  lately_round.py  launch_realsense_all.sh  new_lately.py  push_to_huggingface.py  record_all.py  ur_follow_using_class_ros2.py  vive_tf_and_joy_ros2.py  vive_ur5_teleop_params.py  world_alignment_angle.txt  world_alignment_matrix.txt  wrist_cam.py
